--- a/proyecto-vite/package.json
+++ b/proyecto-vite/package.json
@@ -9,8 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "dom": "^0.0.3",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router": "^6.5.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
