--- a/proyecto-vite/package.json
+++ b/proyecto-vite/package.json
@@ -12,8 +12,10 @@
     "dom": "^0.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-responsive-carousel": "^3.2.23",
     "react-router": "^6.5.0",
-    "react-router-dom": "^6.5.0"
+    "react-router-dom": "^6.5.0",
+    "react-slideshow-image": "^4.1.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
